--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,4 @@
 <IfModule mod_rewrite.c>
-    RewriteEngine on
-    RewriteRule ^.*$ /public/$1 [NC,L,QSA]
+   RewriteEngine On 
+   RewriteRule ^(.*)$ public/$1 [L]
 </IfModule>
